Uploaded image for project: 'Log4cxx'
  1. Log4cxx
  2. LOGCXX-142

socketservertestcase.cpp does not compile with Sun Studio 11 on Solaris

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Minor
    • Resolution: Fixed
    • None
    • 0.10.0
    • Build
    • None
    • SunOS bid-dev24 5.8 Generic_117350-08 sun4u sparc SUNW,Sun-Fire-V240
      CC: Sun C++ 5.8 2005/10/13

    Description

      #include <sys/types.h>"
      #include <unistd.h>"

      must be added to
      tests/src/net/socketservertestcase.cpp

      to be able to find fork on Solaris.

      Attachments

        Activity

          People

            carnold@apache.org Curt Arnold
            josteitv Jostein Tveit
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: