LOGCXX-142: socketservertestcase.cpp does not compile on Sun et al